--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "ts-loader": "^6.1.0",
     "typescript": "^3.6.3",
+    "vue-disqus": "^3.0.5",
     "vue-meta": "^2.2.2",
     "vue-property-decorator": "^8.2.2"
   }
